package pong;

public class PongGame {
}
