package pong.player;

public class HardwareAIPlayer {
}
