package pong.player;

public class HumanPlayer {
}
