@startuml
title Package Architecture Summary Diagram
top to bottom direction
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam linetype polyline
hide empty members

together {
  package "core-suite" as summary_group_core_suite {
    package "hardware" as pkg_edu_sjsu_spring2026_group32_hardware {
      class "NeuralHardwareConfig" as edu_sjsu_spring2026_group32_hardware_NeuralHardwareConfig
      package "serial" as pkg_edu_sjsu_spring2026_group32_hardware_serial {}
      package "signal" as pkg_edu_sjsu_spring2026_group32_hardware_signal {}
    }
    package "player" as pkg_edu_sjsu_spring2026_group32_player {
      class "HardwareAIPlayer" as edu_sjsu_spring2026_group32_player_HardwareAIPlayer
      class "HumanPlayer" as edu_sjsu_spring2026_group32_player_HumanPlayer
      package "model" as pkg_edu_sjsu_spring2026_group32_player_model {}
    }
  }
}

together {
  package "application-suite" as summary_group_application_suite {
    package "bidirectionaltest" as pkg_edu_sjsu_spring2026_group32_bidirectionaltest {
      class "BidirectionalTest" as edu_sjsu_spring2026_group32_bidirectionaltest_BidirectionalTest
      package "core" as pkg_edu_sjsu_spring2026_group32_bidirectionaltest_core {}
      package "ui" as pkg_edu_sjsu_spring2026_group32_bidirectionaltest_ui {}
    }
    package "hitthezone" as pkg_edu_sjsu_spring2026_group32_hitthezone {
      class "HitTheZoneGame" as edu_sjsu_spring2026_group32_hitthezone_HitTheZoneGame
      package "ai" as pkg_edu_sjsu_spring2026_group32_hitthezone_ai {}
      package "core" as pkg_edu_sjsu_spring2026_group32_hitthezone_core {}
      package "model" as pkg_edu_sjsu_spring2026_group32_hitthezone_model {}
      package "ui" as pkg_edu_sjsu_spring2026_group32_hitthezone_ui {}
    }
    package "launcher" as pkg_edu_sjsu_spring2026_group32_launcher {
      class "Launcher" as edu_sjsu_spring2026_group32_launcher_Launcher
      package "core" as pkg_edu_sjsu_spring2026_group32_launcher_core {}
      package "model" as pkg_edu_sjsu_spring2026_group32_launcher_model {}
      package "ui" as pkg_edu_sjsu_spring2026_group32_launcher_ui {}
    }
    package "pong" as pkg_edu_sjsu_spring2026_group32_pong {
      class "PongGame" as edu_sjsu_spring2026_group32_pong_PongGame
      package "ai" as pkg_edu_sjsu_spring2026_group32_pong_ai {}
      package "core" as pkg_edu_sjsu_spring2026_group32_pong_core {}
      package "model" as pkg_edu_sjsu_spring2026_group32_pong_model {}
      package "ui" as pkg_edu_sjsu_spring2026_group32_pong_ui {}
    }
  }
}

summary_group_application_suite ..up> summary_group_core_suite

pkg_edu_sjsu_spring2026_group32_launcher ..> pkg_edu_sjsu_spring2026_group32_bidirectionaltest
pkg_edu_sjsu_spring2026_group32_launcher ..> pkg_edu_sjsu_spring2026_group32_hitthezone
pkg_edu_sjsu_spring2026_group32_launcher ..> pkg_edu_sjsu_spring2026_group32_pong

@enduml
